[gd_scene load_steps=10 format=3 uid="uid://dgctu3k26vnt7"]

[ext_resource type="Texture2D" uid="uid://c0u8ytn6go4va" path="res://player/player.png" id="1_7lplo"]
[ext_resource type="Script" path="res://player/player.gd" id="1_vf77e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewnd8"]
size = Vector2(8, 15)

[sub_resource type="Animation" id="Animation_8buyl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lwwer"]
resource_name = "fall"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="Animation_b6wp7"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4]
}

[sub_resource type="Animation" id="Animation_8b1vw"]
resource_name = "jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_k6qnn"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"create_dust_effect"
}, {
"args": [],
"method": &"create_dust_effect"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i5aew"]
_data = {
"RESET": SubResource("Animation_8buyl"),
"fall": SubResource("Animation_lwwer"),
"idle": SubResource("Animation_b6wp7"),
"jump": SubResource("Animation_8b1vw"),
"run": SubResource("Animation_k6qnn")
}

[node name="Player" type="CharacterBody2D"]
slide_on_ceiling = false
script = ExtResource("1_vf77e")
max_speed = 100
jump_force = -140
max_fall_speed = 150

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("1_7lplo")
hframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_ewnd8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i5aew")
}

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ExtendJumpTimer" type="Timer" parent="."]
wait_time = 0.236
one_shot = true

[node name="RayRight" type="RayCast2D" parent="."]
target_position = Vector2(5, 0)

[node name="RayLeft" type="RayCast2D" parent="."]
target_position = Vector2(-5, 0)
